--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb
 spring.datasource.username=root
-spring.datasource.password=8220
+spring.datasource.password=Monisha**29*0
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
